# GraPhysio

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  .vulture_whitelist.py  GraPhysio.spec  LICENSE  MANIFEST.in  Makefile  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-artifacts.yml  build-windows.yml
.travis/: pypi.yml  win_exe.yml  winexe.yml
csvbackend/: Export.hs  LICENSE  Main.hs  Makefile  ProcessTable.hs  Util.hs  cabal.sandbox.config  csvbackend  csvbackend.cabal  options.hs  processtable.hs
csvbackend/.cabal-sandbox/: add-source-timestamps
dyngraph/: GNUmakefile  __init__.py  algorithms.py  dialogs.py  dyngraph.py  dyngraph.pyw  exporter.py  filter_ui.py  legend.py  mainui.py  mainwindow_ui.py  newplot_ui.py  periodexport_ui.py  plotwidget.py  puloop.py  puplot.py  rpc.py  tsplot.py  utils.py
dyngraph/designer/: mainwindow.ui  newplot.ui  periodexport.ui  physiodbexport.ui
dyngraph/ui/: __init__.py  cycledetect.py  loopwidget.py  mainwindow.py
dyngraph/ui/designer/: cycledetect.ui  loopwidget.ui  mainwindow.ui  setuppuloop.ui
frontend/: GNUmakefile  __init__.py  __main__.py  notes  plotwidget.py  rpc.py  uiInit.py  ui_init.py  ui_mainwindow.py  ui_newplot.py  util.py
frontend/designer/: mainwindow.ui  newplot.ui
graphysio/: __init__.py  __main__.py  algorithms.py  csvio.py  debug.py  dialogs.py  exporter.py  io.py  legend.py  main.py  mainui.py  puplot.py  structures.py  transformations.py  tsplot.py  types.py  utils.py
graphysio/algorithms/: __init__.py  filters.py  waveform.py
graphysio/plotwidgets/: __init__.py  curves.py  plotwidget.py  poiselector.py  puplot.py  spectrogram.py  tsplot.py
graphysio/readdata/: __init__.py  baseclass.py  csv.py  dwc.py  edf.py  excel.py  parquet.py
graphysio/transformations/: __init__.py  curve_to_feet.py  feet_time_interval.py  feet_to_curve.py  perfusion_index.py  precise_feet.py  pulse_arrival_time.py  pulse_transit.py
graphysio/ui/: GNUmakefile  __init__.py  convert_ui_to_py.sh  csvrequest.py  csvrequest.ui  curveproperties.py  curveproperties.ui  curveselect.py  curveselect.ui  cycledetect.py  datetime.py  datetime.ui  dwcopen.py  dwcopen.ui  filter.py  filter.ui  loopwidget.py  loopwidget.ui  mainwindow.py  mainwindow.ui  newplot.py  newplot.ui  periodexport.py  poiwidget.py  poiwidget.ui  setuppuloop.py
graphysio/ui/designer/: loopwidget.ui  mainwindow.ui  newplot.ui
graphysio/writedata/: __init__.py  csv.py  ecgplot.py  edf.py  exporter.py  matlab.py  parquet.py
scripts/: DynGraph.py  GraPhysio.py  graphysioui.py
tools/: linedistrib.sh
