[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "graphysio"
version = "2024.11.22"
description = "Visualizer and analyser for biometric signals"
authors = ["Jona Joachim <jona@joachim.cc>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/jaj42/GraPhysio"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2"
pathvalidate = "^3"
Pint = "^0.24"
pyqtgraph = "^0.13"
scipy = "^1.13"
numexpr = "^2.9"
physiocurve = "^2024"
pebble = "^5.0.7"
pyqt5 = "^5.15"
pyshortcuts = {version = "^1.9", optional = true}
pyarrow = {version = ">=14", optional = true}
pyEDFlib = {version = "^0.1.37", optional = true}
dwclib = {version = "^2024.9.17", optional = true}

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.4.25"
vulture = "^2.5"
vermin = "^1.4.0"
safety = "^2"

[tool.poetry.extras]
dwc = ["dwclib"]
edf = ["pyEDFlib"]
parquet = ["pyarrow"]
shortcuts = ["pyshortcuts"]
all = ["dwclib", "pyEDFlib", "pyarrow", "pyshortcuts"]

[tool.poetry.scripts]
graphysio = "graphysio.main:main"

[tool.ruff]
extend-exclude = ["ui"]
line-length = 88
