[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "graphysio"
version = "2025.3.27"
description = "Visualizer and analyser for biometric signals"
authors = ["Jona Joachim <jona@joachim.cc>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/jaj42/GraPhysio"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pyside6 = "^6.8"
pandas = "^2"
pathvalidate = "^3"
Pint = "^0.24"
pyqtgraph = "^0.13"
scipy = "^1.15"
numexpr = "^2.10"
pebble = "^5.0.7"
physiocurve = ">=2024.12.16"
python-calamine = {version = "^0.3.1", optional = true}
pyshortcuts = {version = "^1.9", optional = true}
pyarrow = {version = ">=14", optional = true}
pyEDFlib = {version = "==0.1.38", optional = true}
dwclib = {version = ">=2025.3.12", extras = ["dwcmeta"], optional = true}
ecg-plot = "^0.2.8"
matplotlib = "^3.10.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
flake8-bandit = "^3.0.0"
flake8-bugbear = "^22.4.25"
vulture = "^2.5"
vermin = "^1.4.0"
safety = "^2"

[tool.poetry.extras]
dwc = ["dwclib"]
edf = ["pyEDFlib"]
parquet = ["pyarrow"]
shortcuts = ["pyshortcuts"]
excel = ["python-calamine"]
all = ["dwclib", "pyEDFlib", "pyarrow", "pyshortcuts"]

[tool.poetry.scripts]
graphysio = "graphysio.main:main"

[tool.ruff]
extend-exclude = ["ui"]
line-length = 88
