[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphysio"
version = "2025.9.20"
description = "Visualizer and analyser for biometric signals"
authors = [{ name = "Jona Joachim", email = "jona@joachim.cc" }]
requires-python = ">=3.10,<=3.14"
readme = "README.md"
license = "ISC"
dependencies = [
    "pyside6~=6.8",
    "pandas>=2,<3",
    "pathvalidate>=3,<4",
    "Pint>=0.24,<0.26",
    "pyqtgraph>=0.13,<0.14",
    "scipy~=1.15",
    "numexpr~=2.10",
    "pebble>=5.0.7,<6",
    "physiocurve>=2024.12.16",
    "ecg-plot>=0.2.8,<0.3",
    "matplotlib>=3.10.0,<4",
]

[project.optional-dependencies]
dwc = ["dwclib[dwcmeta]>=2025.3.12"]
edf = ["pyEDFlib>=0.1.38"]
parquet = ["pyarrow>=14"]
shortcuts = ["pyshortcuts~=1.9"]
excel = ["python-calamine>=0.3.1,<0.4"]
all = [
    "dwclib[dwcmeta]>=2025.3.12",
    "pyEDFlib>=0.1.38",
    "pyarrow>=14",
    "pyshortcuts~=1.9",
]

[project.urls]
Repository = "https://github.com/jaj42/GraPhysio"

[project.scripts]
graphysio = "graphysio.main:main"

[dependency-groups]
dev = [
    "flake8>=4.0.1,<5",
    "flake8-bandit>=3.0.0,<4",
    "flake8-bugbear>=22.4.25,<23",
    "vulture~=2.5",
    "vermin>=1.4.0,<2",
    "safety>=2,<3",
]

[tool.ruff]
extend-exclude = ["ui"]
line-length = 88
