[metadata]
name = graphysio
version = 2020.03.23
author = Jona Joachim
author-email = jona@joachim.cc
home-page = https://github.com/jaj42/graphysio
description = Graphical time series visualizer and analyzer.
long-description = file: README.md
license = ISC
license-file = LICENSE
platform = any
keywords = 
    time series
    data
    visualizing
    analysis
classifiers =
    Development Status :: 3 - Alpha
    Environment :: X11 Applications :: Qt
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: ISC License (ISCL)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Topic :: Database :: Front-Ends
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
setup_requires =
    setuptools >=38.3.0
install_requires =
    numpy
    pandas
    pathvalidate
    pint
    PyQt5
    pyqtgraph
    scipy
    sympy
    typing
packages = 
    graphysio
    graphysio.algorithms
    graphysio.plotwidgets
    graphysio.ui
scripts = scripts/graphysioui.py
